Spit and polished error style and DB access
Modified Error message styles, added flavor text and changes DB access to class

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
                 <li><a href="index.php">Home</a></li>
                 <li><a href="tools.html">Tools</a></li>
                 <li><a href="gallery.html">Project Gallery</a></li>
-                <li><a href="faq.html">FAQs</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.php">Contact Me</a></li>
             </ul>
 
