--- a/about.html
+++ b/about.html
@@ -56,13 +56,13 @@
 
                 <h3>Professional</h3>
                 <p> 
-                    I've spent most of my life in the Army.  I was orrignally tricked into become a 
+                    I've spent most of my life in the Army.  I was originally tricked into become a 
                     telephone operator.  The MOS was called “Computer Network Switching Systems 
-                    Operator”.  Luckily I was only dissaponted in this choice for about 2 years.  
+                    Operator”.  Luckily I was only disappointed in this choice for about 2 years.  
                     Then the Army trained me to be one of the very first Operators of their new IP 
-                    based telephone switching systsms.  I learn about networking, subnetting, codecs 
-                    and all kinds of usefull concepts and skills in today’s technology hungry wold.  
-                    Eventially I became a team chief, before leaving the service with 11 years
+                    based telephone switching systems.  I learn about networking, sub-netting, codecs 
+                    and all kinds of useful concepts and skills in today’s technology hungry wold.  
+                    Eventually I became a team chief, before leaving the service with 11 years
                     under my belt.
                 </p>
                 
@@ -72,8 +72,8 @@
                 <p>
                     I’m currently married to a beautiful woman and an attention sponge of a daughter. 
                     When I’m not working or slaving away over homework, I’m trying teach my 
-                    &ldquo;Pumpkin&rdquo; the ABCs or helping my wife manage her Ebay busniess.  She sells vintage 
-                    photo prints and calls her store Evocatave Walls. I have two dogs that are currently
+                    &ldquo;Pumpkin&rdquo; the ABCs or helping my wife manage her Ebay business.  She sells vintage 
+                    photo prints and calls her store Evocative Walls. I have two dogs that are currently
                     keeping my grandmother company. They are both part terrier and part... something. 
                     Their names are Maggie and Jack.
                 </p>
@@ -83,9 +83,9 @@
                 <h3>Skills</h3>
 
                 <p>
-                    From my many years as a network administrator for the army I'm extremly familiar with the 
-                    Cisco IOS comand line language. I'm strong in both C# and Java oject oriented programing
-                    languages and have trained on Eclips and Visual Studio respectivly. below are a list of 
+                    From my many years as a network administrator for the army I'm extremely familiar with the 
+                    Cisco IOS command line language. I'm strong in both C# and Java object oriented programming
+                    languages and have trained on Eclipse and Visual Studio respectively. below are a list of 
                     languages roughly ordered according to my comfort level im them.
                 </p>
 
