Added Github social Media Icon to all webpages

--- a/about.html
+++ b/about.html
@@ -111,6 +111,7 @@
                     <tr>
                         <td><a href="https://www.facebook.com/joseph.marsh.1840" target="_blank"><img alt="Facebook Icon" src="icons/facebook.png" /></a></td>
                         <td><a href="https://monsterousoperandi.deviantart.com/" target="_blank"><img alt="Deviant Art Icon" src="icons/deviantart.png" /></a></td>
+                        <td><a href="https://github.com/JosephMarsh" target="_blank"><img alt="Git Hub Icon" src="icons/github.png" /></a></td>
                         <td><a href="https://www.linkedin.com/in/joseph-marsh-67996173/" target="_blank"><img alt="Linkedin Icon" src="icons/linkedin.png" /></a></td>
                     </tr>
                 </table>
