--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
 
                 <h3>Childhood</h3>
                 <p>
-                    Having grown up in an Airforce family, I traveled a lot as a child.  Having
-                     seen many parts of the world, I had a wide scope of imagination, even back 
-                    then.  I enjoy creating worlds and exploring possibilities.
+                    Having grown up in an Airforce family, I traveled allot as a child.  I've
+                     seen many parts of the world and have a wide scope of imagination.  
+			I enjoy creating worlds and exploring new possibilities.
                 </p>
                 
                 <hr />    
@@ -44,10 +44,9 @@
                 <p> 
                     have have a love for science, reason and math (not that I’m great at them 
                     mind you).  I have a good sense of humor and I’m told I’m pretty funny.  
-                    I work in IT and three days of the week I work for 19 hours when you include 
-                    school work and travel time so I don’t get to game as much as I’d like anymore. 
-                    But I’m a huge fan of the pen and paper art form. It’s the best way to get to 
-                    understand systems and try and wrap your mind around creating one for your own.  
+                    I work in IT full time and go to school full time so I don’t get to game as much as I’d like anymore. 
+                    But I’m a huge fan of the pen and paper form of role playing game. It’s the best way to get to 
+                    understand systems and try and wrap your mind around creating one of your own.  
                     If you want to develop games, the pen and paper experience is invaluable.  
                     Board games too, for that matter.
                 </p>
@@ -56,12 +55,12 @@
 
                 <h3>Professional</h3>
                 <p> 
-                    I've spent most of my life in the Army.  I was originally tricked into become a 
+                    I've spent most of my life in the Army.  I was originally tricked into becomeing a 
                     telephone operator.  The MOS was called “Computer Network Switching Systems 
                     Operator”.  Luckily I was only disappointed in this choice for about 2 years.  
                     Then the Army trained me to be one of the very first Operators of their new IP 
                     based telephone switching systems.  I learn about networking, sub-netting, codecs 
-                    and all kinds of useful concepts and skills in today’s technology hungry wold.  
+                    and all kinds of useful concepts and skills in today’s technology hungry world.  
                     Eventually I became a team chief, before leaving the service with 11 years
                     under my belt.
                 </p>
@@ -95,6 +94,10 @@
                     <li>C#</li>
                     <li>Java 8</li>
                     <li>HTML5</li>
+		    <li>PHP</li>
+		    <li>XMAL</li>
+		    <li>Java Script</li>
+		    <li>jQuery</li>	
                     <li>CSS3</li>
                     <li>SQL commands</li>
                     <li>XML Schema</li>
